--- a/src/main/java/br/edu/ifms/loja/app/view/JanelaInternaCadastros.form
+++ b/src/main/java/br/edu/ifms/loja/app/view/JanelaInternaCadastros.form
@@ -46,9 +46,9 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="botaoProdutos" alignment="3" min="-2" pref="104" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="botaoClientes" alignment="1" min="-2" pref="104" max="-2" attributes="0"/>
+                      <Component id="botaoProdutos" min="-2" pref="104" max="-2" attributes="0"/>
                   </Group>
                   <Component id="botaoFornecedores" min="-2" pref="104" max="-2" attributes="0"/>
               </Group>
