Frente de Caixa - OK - Falta somente Finalizar Venda

--- a/src/main/java/br/edu/ifms/loja/app/layouts/GenericCRUD.form
+++ b/src/main/java/br/edu/ifms/loja/app/layouts/GenericCRUD.form
@@ -244,6 +244,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="campoBuscar">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoBuscarActionPerformed"/>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="campoBuscarKeyReleased"/>
           </Events>
         </Component>
