--- a/src/main/java/br/edu/ifms/loja/app/view/JanelaInternaVendas.form
+++ b/src/main/java/br/edu/ifms/loja/app/view/JanelaInternaVendas.form
@@ -46,6 +46,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Frente de Caixa"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoFrenteDeCaixaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botaoRelatorios">
       <Properties>
